STARCH-531 Java 21